// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Environment Variables inlines specific environment variables from object 1`] = `
"// packages/bunup/test/.project/src/index.ts
var testVar = "overridden-value";
var anotherVar = process.env.ANOTHER_VAR;
var undefinedVar = "defined-in-config";
export {
  undefinedVar,
  testVar,
  anotherVar
};
"
`;

exports[`Environment Variables handles import.meta.env references 1`] = `
"// packages/bunup/test/.project/src/index.ts
var testVar = "test-value";
export {
  testVar
};
"
`;

exports[`Environment Variables inlines environment variables with different types 1`] = `
"// packages/bunup/test/.project/src/index.ts
var stringVar = "string-value";
var numberVar = "123";
var booleanVar = "true";
var jsonVar = '{"key":"value"}';
export {
  stringVar,
  numberVar,
  jsonVar,
  booleanVar
};
"
`;

exports[`Environment Variables works across multiple output formats 1`] = `
"var import_node_module = require("node:module");
var __defProp = Object.defineProperty;
var __getOwnPropNames = Object.getOwnPropertyNames;
var __getOwnPropDesc = Object.getOwnPropertyDescriptor;
var __hasOwnProp = Object.prototype.hasOwnProperty;
var __moduleCache = /* @__PURE__ */ new WeakMap;
var __toCommonJS = (from) => {
  var entry = __moduleCache.get(from), desc;
  if (entry)
    return entry;
  entry = __defProp({}, "__esModule", { value: true });
  if (from && typeof from === "object" || typeof from === "function")
    __getOwnPropNames(from).map((key) => !__hasOwnProp.call(entry, key) && __defProp(entry, key, {
      get: () => from[key],
      enumerable: !(desc = __getOwnPropDesc(from, key)) || desc.enumerable
    }));
  __moduleCache.set(from, entry);
  return entry;
};
var __export = (target, all) => {
  for (var name in all)
    __defProp(target, name, {
      get: all[name],
      enumerable: true,
      configurable: true,
      set: (newValue) => all[name] = () => newValue
    });
};

// packages/bunup/test/.project/src/index.ts
var exports_src = {};
__export(exports_src, {
  formatTest: () => formatTest
});
module.exports = __toCommonJS(exports_src);
var formatTest = "format-value";
"
`;

exports[`Environment Variables works across multiple output formats 2`] = `
"(() => {
  var import_node_module = __require("node:module");
  var __defProp = Object.defineProperty;
  var __getOwnPropNames = Object.getOwnPropertyNames;
  var __getOwnPropDesc = Object.getOwnPropertyDescriptor;
  var __hasOwnProp = Object.prototype.hasOwnProperty;
  var __moduleCache = /* @__PURE__ */ new WeakMap;
  var __toCommonJS = (from) => {
    var entry = __moduleCache.get(from), desc;
    if (entry)
      return entry;
    entry = __defProp({}, "__esModule", { value: true });
    if (from && typeof from === "object" || typeof from === "function")
      __getOwnPropNames(from).map((key) => !__hasOwnProp.call(entry, key) && __defProp(entry, key, {
        get: () => from[key],
        enumerable: !(desc = __getOwnPropDesc(from, key)) || desc.enumerable
      }));
    __moduleCache.set(from, entry);
    return entry;
  };
  var __export = (target, all) => {
    for (var name in all)
      __defProp(target, name, {
        get: all[name],
        enumerable: true,
        configurable: true,
        set: (newValue) => all[name] = () => newValue
      });
  };
  var __require = /* @__PURE__ */ import_node_module.createRequire(import.meta.url);

  // packages/bunup/test/.project/src/index.ts
  var exports_src = {};
  __export(exports_src, {
    formatTest: () => formatTest
  });
  var formatTest = "format-value";
})();
"
`;

exports[`Environment Variables works across multiple output formats 3`] = `
"// packages/bunup/test/.project/src/index.ts
var formatTest = "format-value";
export {
  formatTest
};
"
`;

exports[`Environment Variables works with multiple entry points 1`] = `
"// packages/bunup/test/.project/src/other.ts
var otherVar = "multi-value";
export {
  otherVar
};
"
`;

exports[`Environment Variables works with multiple entry points 2`] = `
"// packages/bunup/test/.project/src/index.ts
var indexVar = "multi-value";
export {
  indexVar
};
"
`;

exports[`Environment Variables interacts correctly with defined environment variables 1`] = `
"// packages/bunup/test/.project/src/index.ts
var definedEnv = "env-value";
var envAndDefine = "define-value";
export {
  envAndDefine,
  definedEnv
};
"
`;
